# LynxScript

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: grammar.pest  main.rs  stdlib.lxs  test.lxs
src/codegen/: json.rs  mod.rs  structures.rs  symbol_table.rs
src/compiler/: mod.rs  test.rs
src/lib/: stdlib.lxs
src/parser/: mod.rs  test.rs
