[package]
name = "LynxScript-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.60", features = ["derive"] }
lazy_static = "1.5.0"
pest = "2.8.3"
pest_derive = { version = "2.8.3", features = ["grammar-extras"] }
# pest_typed = "0.20.11"
# pest_typed_derive = { version = "0.20.11", features = ["grammar-extras"] }
regex-macro = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
